--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,6 @@ phases:
   build:
     commands:
      
-      - sed -i "" "s/FROM .*/FROM $DOCKER_IMAGE/" Dockerfile
+      - sed -in "" "s/FROM .*/FROM $DOCKER_IMAGE/" Dockerfile
       - cat Dockerfile
    
