--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
   build:
     commands:
      
-      - sed -i "" -e "s/FROM .*/FROM $DOCKER_IMAGE/" Dockerfile
+      - sed -i '' -e 's/FROM .*/FROM $DOCKER_IMAGE/' Dockerfile
       #- sed -i Dockerfile -e "s/FROM .*/FROM $DOCKER_IMAGE/" Dockerfile
       - cat Dockerfile
    
